# AED_Consumidor_Gov_Br

./: .gitignore  .pre-commit-config.yaml  Readme.md  app.py  file.txt  pyproject.toml  requirements.txt  teste.ipynb
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  ISSUE_TEMPLATE.yml
.github/workflows/: Data_Clear.yml  Linter.yml  Security.yml
Analysis/: consumidor.ipynb  requirements_analysis.txt
Data/Data_for_clear/: .gitattributes  GOLDEN_dfGov.parquet  dfGov.gzip
ETL/: data_etl.ipynb  requirements_data_for_clear.txt
ETL/extract/: extract_and_save_data.py
ETL/transformation/: transformation.py
Requirements_gitactions/: requirements_linter.txt
